manifests/rank/rank-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: rank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rank 
  template:
    metadata:
      labels: 
        app: rank 
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-rank
        image:  rs/rank:latest
        ports:
          - name: http
            containerPort: 5400
        resources:
          requests: 
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
      - name: rs-rank-plugin
        image:  rs/rank-plugin:latest
        ports:
          - name: http
            containerPort: 50051
        resources:
          requests: 
            cpu: 2000m
            memory: 4096Mi
          limits:
            cpu: 4000m
            memory: 8192Mi
        volumeMounts:
          - name: persistent-storage
            mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
